bin/testsuite/tests/compiler/src/compiler31.swg
#global testerror "Err0686";
#unittest // swc-expected-error {{parser_err_invalid_compiler}}
SWA